# data-inttrie

./: .travis.yml  data-inttrie.cabal  infinite-search.cabal
Data/: IntTrie.hs
