Name: data-inttrie
Description:
    A simple lazy, infinite trie from integers.
Version: 0.01
Stability: experimental
Synopsis: A lazy, infinite trie of integers.
License: BSD3
Category: Data
Author: Luke Palmer <lrpalmer@gmail.com>
Homepage: http://github.com/luqui/data-inttrie
Maintainer: Luke Palmer <lrpalmer@gmail.com>
Build-Type: Simple
Build-Depends: base
Exposed-Modules: Data.IntTrie
